Unused imports and simplifying expressions